--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/score
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/score
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
+#aws.endpoint=localhost:4566
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:rss
+spring.datasource.username=sa
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-
-aws.endpoint=localhost:4566
-
-#spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.consumer.auto-offset-reset=earliest
